[gd_scene load_steps=8 format=2]

[ext_resource path="res://root_2d.gd" type="Script" id=1]
[ext_resource path="res://assets/ns1.png" type="Texture" id=2]
[ext_resource path="res://2d/Star.gd" type="Script" id=3]
[ext_resource path="res://assets/background_scene.tscn" type="PackedScene" id=4]
[ext_resource path="res://2d/PlanetPropertiesController.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/new_theme.tres" type="Theme" id=6]
[ext_resource path="res://assets/background.ogg" type="AudioStream" id=7]

[node name="Node2D" type="Node2D"]
position = Vector2( 4, 0 )
script = ExtResource( 1 )

[node name="SystemLayer" type="Node2D" parent="."]

[node name="Star" type="Sprite" parent="SystemLayer"]
position = Vector2( 456.684, 291.025 )
scale = Vector2( 1.13385, 1.13401 )
z_index = 1
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="StarSystemCam" type="Camera2D" parent="SystemLayer"]
position = Vector2( 510, 300 )
current = true

[node name="UILayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Backgorund" parent="UILayer" instance=ExtResource( 4 )]
position = Vector2( 517, 302.375 )
scale = Vector2( 1.60938, 2.15405 )
z_index = -4
frame = 3

[node name="PlanetPropertiesController" parent="UILayer" instance=ExtResource( 5 )]
margin_left = 612.0
margin_top = -20.0
margin_right = 612.0
margin_bottom = -20.0

[node name="Button" type="Button" parent="UILayer"]
margin_left = 424.0
margin_top = 550.0
margin_right = 604.0
margin_bottom = 580.0
theme = ExtResource( 6 )
text = "Start 3D Sim"

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
[connection signal="create_planet" from="UILayer/PlanetPropertiesController" to="." method="add_planet_to_scene"]
[connection signal="remove_planet" from="UILayer/PlanetPropertiesController" to="." method="remove_planet_from_scene"]
[connection signal="pressed" from="UILayer/Button" to="." method="_on_Button_pressed"]
